FlashDetector: support search SpecTek pns

--- a/FlashDetector/composer.json
+++ b/FlashDetector/composer.json
@@ -9,6 +9,7 @@
     }
   ],
   "require": {
-    "simplehtmldom/simplehtmldom": "dev-master"
+    "simplehtmldom/simplehtmldom": "dev-master",
+    "ext-json": "*"
   }
 }
