PeachPie: update SDK for decodeID

--- a/FlashDetector/composer.json
+++ b/FlashDetector/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "itxtech/flashdetector",
   "description": "Universal NAND Flash Part Number Decoder",
-  "license": "Apache License 2.0",
+  "license": "AGPL-3.0-or-later",
   "authors": [
     {
       "name": "PeratX",
